# jobhaul

./: .gitignore  README.md  pyproject.toml
config/: profile.example.yaml
src/jobhaul/: __init__.py  cli.py  config.py  constants.py  flagging.py  log.py  models.py  service.py
src/jobhaul/analysis/: __init__.py  adapter.py  claude_cli.py  matcher.py
src/jobhaul/collectors/: __init__.py  base.py  indeed.py  jooble.py  linkedin.py  platsbanken.py  registry.py  remoteok.py  stealth.py
src/jobhaul/db/: __init__.py  queries.py  schema.py
src/jobhaul/web/: __init__.py  app.py
src/jobhaul/web/static/: style.css
src/jobhaul/web/templates/: base.html  dashboard.html  listing_detail.html  listings.html  scan.html
tests/: test_claude_cli.py  test_cli.py  test_collectors.py  test_config.py  test_db.py  test_flagging.py  test_matcher.py  test_refactored.py  test_scrapers.py  test_stealth.py  test_web.py
