[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhaul"
version = "0.1.0"
description = "Personal job market intelligence CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "fastapi>=0.100",
    "pydantic>=2.0",
    "httpx>=0.24",
    "PyYAML>=6.0",
    "rich>=13.0",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "respx>=0.20",
    "ruff>=0.1",
]

[project.scripts]
jobhaul = "jobhaul.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99
